feat: refactor classes and update db service