@@ -6,8 +6,10 @@ import com.copytrading.connector.BinanceConnector;
 import com.copytrading.connector.model.BalanceDto;
 import com.copytrading.connector.model.OrderDto;
 import com.copytrading.connector.model.PositionDto;
-import com.copytrading.futuresleaderboard.model.response.position.Position;
 import com.copytrading.model.OrderSide;
+import com.copytrading.service.LeadTraderDatabaseService;
+import com.copytrading.sources.binance.futuresleaderboard.model.request.StatisticsType;
+import com.copytrading.sources.binance.futuresleaderboard.model.response.position.Position;
 import com.google.gson.JsonSyntaxException;
 import lombok.SneakyThrows;
 import org.jetbrains.annotations.NotNull;
@@ -24,33 +26,37 @@ import java.util.logging.FileHandler;
 import java.util.logging.Formatter;
 import java.util.logging.LogRecord;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
-import static com.copytrading.connector.config.BinanceConfig.futuresClient;
-import static com.copytrading.futuresleaderboard.FuturesLeaderboardScrapper.getTraderPositions;
-import static com.copytrading.futuresleaderboard.FuturesLeaderboardScrapper.getTradersBaseInfo;
 import static com.copytrading.model.BaseAsset.USDT;
 import static com.copytrading.model.OrderSide.*;
 import static com.copytrading.service.OrderConverterService.getMarketOrderParams;
 import static com.copytrading.service.OrderConverterService.round;
+import static com.copytrading.sources.binance.futuresleaderboard.FuturesLeaderboardScrapper.*;
+import static com.copytrading.sources.binance.futuresleaderboard.model.request.PeriodType.MONTHLY;
 
 /**
  * Simple bot alternative.
  * This bot just iterate via copy traders orders and place position with fixed balance.
  *
  * @author Artemii Kurilko
- * @version 2.0
+ * @version 2.3
  */
-//TODO:
-// - добавить байбит тестнет
 public class SimplePositionNotifier {
-    private static final BinanceConnector client = new BinanceConnector(futuresClient());
+    /**
+     * Trading mode: testEnv=false, prodEnv=true
+     */
+    private static boolean mode = false;
+
+    private static final BinanceConnector client = new BinanceConnector(mode);
+    private static final LeadTraderDatabaseService db = new LeadTraderDatabaseService(mode);
+    private static final ScheduledLeftOrdersProcessor leftOrdersProcessor = new ScheduledLeftOrdersProcessor(mode);
     private static final Logger log = initLogger();
 
     // trading
+    private static HashMap<String, List<String>> leadTradersOrders = new HashMap<>();
     private static final HashMap<String, Integer> leverageStorage = new HashMap<>();
     private static int FIXED_MARGIN_PER_ORDER;
-    private static final int maxNumberOfOrders = 15;
+    private static final int maxNumberOfOrders = 20;
     private static final int maxProfitAllowed = 3;
     private static final int DEFAULT_LEVERAGE = 12;
 
@@ -59,14 +65,23 @@ public class SimplePositionNotifier {
     private static final int delay = 10;
 
     @SneakyThrows
-    public static void main(String[] args) {
-        List<String> ids = List.of(
-//                "1FB04E31362DEED9CAA1C7EF8A771B8A",
-                "ACD6F840DE4A5C87C77FB7A49892BB35",
-                "F3D5DFEBBB2FDBC5891FD4663BCA556F",
-                "E921F42DCD4D9F6ECC0DFCE3BAB1D11A",
-                "3BAFAFCA68AB85929DF777C316F18C54"
-        );
+    public static void mafin(String[] args) {
+        ArrayList<String> ids;
+        if (db.getLeaderIdsAndOrders().isEmpty()) {
+            ids = new ArrayList<>(Arrays.asList(
+//                    "1FB04E31362DEED9CAA1C7EF8A771B8A",
+                    "ACD6F840DE4A5C87C77FB7A49892BB35",
+                    "F3D5DFEBBB2FDBC5891FD4663BCA556F",
+                    "E921F42DCD4D9F6ECC0DFCE3BAB1D11A",
+                    "3BAFAFCA68AB85929DF777C316F18C54"
+            ));
+        } else {
+            HashMap<String, List<String>> idsAndOrdersMap = db.getLeaderIdsAndOrders();
+            ids = new ArrayList<>(idsAndOrdersMap.keySet());
+            leadTradersOrders = idsAndOrdersMap;
+        }
+        leftOrdersProcessor.proceedLeftOrders();
+
         ScheduledExecutorService executorService = Executors.newSingleThreadScheduledExecutor();
         executorService
                 .scheduleWithFixedDelay(() -> {
@@ -88,25 +103,37 @@ public class SimplePositionNotifier {
                         }
                     } catch (Exception e) {
                         executorService.shutdown();
-                        e.printStackTrace();
+                        db.resetLeaderIdsAndOrders(leadTradersOrders);
+                        throw new RuntimeException(e);
                     }
                 }, 0, delay, TimeUnit.SECONDS);
     }
 
-    /**
-     * Checks that trader is active and shares his positions.
-     * @param tradersIds list of ids
-     * @throws IOException if exceptoin occurs
-     */
-    private static void tradersCheck(List<String> tradersIds) throws IOException {
-        for (String id : tradersIds) {
-            if (!getTradersBaseInfo(id).getData().isPositionShared()) {
-                throw new RuntimeException("Error trader: " + id + " has hidden his positions.");
-            }
-        }
-    }
+    @SneakyThrows
+    public static void main(String[] args) {
+        List<String> ids = new ArrayList<>(Arrays.asList(
+//                    "1FB04E31362DEED9CAA1C7EF8A771B8A",
+                "ACD6F840DE4A5C87C77FB7A49892BB35",
+                "F3D5DFEBBB2FDBC5891FD4663BCA556F",
+                "E921F42DCD4D9F6ECC0DFCE3BAB1D11A",
+                "3BAFAFCA68AB85929DF777C316F18C54"
+        ));
+   }
 
     private static void proceedTradersPositions(List<String> tradersIds) throws IOException {
+        // actualize db active order with current open positions
+        List<PositionDto> activePositions = client.positionInfo();
+        // взять лефт ордерс тоже блять, тип если у нового трейдера появился такой же как и в лефт, то лефт привязать к этому трейдеру
+        List<String> ordersIds = leadTradersOrders.values().stream().flatMap(List::stream).toList();
+
+
+        // add all traders positions to map
+        // if there are positions which don't exist in map, check if it's left, if not execute immediately, left order should have separate logic asynchronously
+        // than excluding the ones I have, emulate them in order
+        // add one more exchange to emulate
+
+
+
         // add all traders positions to map
         Map<String, Position> traderPositionMap = new HashMap<>();
         for (String id : tradersIds) {
@@ -120,7 +147,7 @@ public class SimplePositionNotifier {
         List<PositionDto> activePositions = client.positionInfo();
         for (PositionDto positionDto : activePositions) {
             if (traderPositionMap.keySet().stream().noneMatch(symbol -> symbol.equals(positionDto.getSymbol()))) {
-                executeOrder(positionDto);
+                executeOrder(positionDto, "leadTraderId", "orderId");
             }
         }
 
@@ -164,12 +191,11 @@ public class SimplePositionNotifier {
                     double o2Diff = Math.abs(1 - o2.getEntryPrice() / o2.getMarkPrice());
                     return Double.compare(o1Diff, o2Diff);
                 }
-            }).collect(Collectors.toList());
+            }).toList();
             for (Position positionData : sortedPositions) {
                 try {
-                    if (availableBalance >= FIXED_MARGIN_PER_ORDER) {
-                        emulateOrder(positionData);
-                    }
+                    double margin = availableBalance >= FIXED_MARGIN_PER_ORDER ? FIXED_MARGIN_PER_ORDER : availableBalance;
+                    emulateOrder(positionData, margin);
                     availableBalance -= FIXED_MARGIN_PER_ORDER;
                 } catch (Exception e) {
                     log.info("ERROR: " + e.getMessage() + " Symbol: " + positionData.getSymbol() + " Position: " + positionData);
@@ -177,13 +203,11 @@ public class SimplePositionNotifier {
                 }
             }
         } else {
-            positionsToEmulate.forEach(SimplePositionNotifier::emulateOrder);
+            positionsToEmulate.forEach(pos -> emulateOrder(pos, FIXED_MARGIN_PER_ORDER));
         }
     }
 
-    //FIXME:
-    // - ETHBTC emulate order calculate amount
-    private static void emulateOrder(Position positionData) {
+    private static void emulateOrder(Position positionData, double margin) {
         if (isToLateToCopy(positionData)) {
             return;
         }
@@ -191,7 +215,7 @@ public class SimplePositionNotifier {
         int leverage = adjustLeverage(positionData);
 
         // Calculate order amount
-        double amount = FIXED_MARGIN_PER_ORDER * leverage / positionData.getMarkPrice();
+        double amount = margin * leverage / positionData.getMarkPrice();
         if (symbol.equals("ETHBTC")) {
             System.out.println("==============================================================");
             String errorMessage = "ERROR: Emulate order cannot find symbol: " + positionData.getSymbol();
@@ -207,6 +231,15 @@ public class SimplePositionNotifier {
         try {
             OrderDto response = client.placeOrder(params);
             log.info("Emulated order. Symbol: " + response.getSymbol() + " Margin: $" + round(FIXED_MARGIN_PER_ORDER, 2));
+            // add order to storage
+            String traderId = positionData.getTraderId();
+            List<String> updatedOrders = leadTradersOrders.get(traderId);
+            if (updatedOrders != null) {
+                updatedOrders.add(response.getOrderId());
+                leadTradersOrders.put(traderId, updatedOrders);
+            } else {
+                leadTradersOrders.put(traderId, List.of(response.getOrderId()));
+            }
         } catch (BinanceClientException clientException) {
             if (clientException.getMessage().contains("Order's notional must be no smaller")) {
                 System.out.println("==============================================================");
@@ -254,14 +287,22 @@ public class SimplePositionNotifier {
         }
     }
 
-    private static void executeOrder(PositionDto positionDto) {
+    private static void executeOrder(PositionDto positionDto, String traderId, String orderId) {
+        String symbol = positionDto.getSymbol();
         LinkedHashMap<String, Object> params = getMarketOrderParams(
-                positionDto.getSymbol(),
+                symbol,
                 getOppositeSide(positionDto),
                 Math.abs(positionDto.getPositionAmt())
         );
         OrderDto response = client.placeOrder(params);
-        log.info("Executed Symbol: " + positionDto.getSymbol() + " UPL: " + positionDto.getUnRealizedProfit() + " Position " + response);
+        System.out.println(response);
+        // remove order is from list
+        if (leadTradersOrders.get(traderId) != null) {
+            leadTradersOrders.get(traderId).remove(orderId);
+        } else {
+            leadTradersOrders.put(traderId, Collections.emptyList());
+        }
+        log.info("Executed Symbol: " + symbol + " UPL: " + positionDto.getUnRealizedProfit());
     }
 
     /**
@@ -283,10 +324,36 @@ public class SimplePositionNotifier {
         return true;
     }
 
+    /**
+     * Checks that trader is active and shares his positions,
+     * If not replace with next in ranking trader.
+     * @param tradersIds list of ids
+     * @throws IOException if exception occurs
+     */
+    private static void tradersCheck(List<String> tradersIds) throws IOException {
+        List<String> iterateIds = new ArrayList<>(tradersIds);
+        for (String id : iterateIds) {
+            if (!getTradersBaseInfo(id).getData().isPositionShared()) {
+                // replace lead trader id
+                String leadId = getNextTopTrader(tradersIds, MONTHLY, StatisticsType.PNL);
+                tradersIds.remove(id);
+                tradersIds.add(leadId);
+
+                // transfer trader orders to left orders
+                List<String> leftOrderList = leadTradersOrders.remove(id);
+                leadTradersOrders.put(leadId, Collections.emptyList());
+                if (leftOrderList != null && !leftOrderList.isEmpty()) {
+                    db.saveLeftOrders(leftOrderList);
+                }
+            }
+        }
+    }
+
     @SneakyThrows
     private static Logger initLogger() {
+        String fileName = mode ? "server_log.txt" : "test_log.txt";
         Logger logger = Logger.getLogger("CopyTradingBot");
-        FileHandler fh = new FileHandler("server_log.txt", true);
+        FileHandler fh = new FileHandler(fileName, true);
         fh.setFormatter(new Formatter() {
             @NotNull
             @Override
